--- a/VIPER_Demo/Podfile
+++ b/VIPER_Demo/Podfile
@@ -5,6 +5,10 @@ platform :ios, '9.3'
 use_frameworks!
 
 def testing_pods
+  pod 'Quick', '~> 0.9.2'
+  pod 'Nimble', '~> 4.0.1'
+  pod 'OHHTTPStubs'
+  pod 'OHHTTPStubs/Swift'
 end
 
 def networking_pods 
