upgrading to Swift3 & iOS10

--- a/VIPER_Demo/Podfile
+++ b/VIPER_Demo/Podfile
@@ -5,22 +5,23 @@ platform :ios, '9.3'
 use_frameworks!
 
 def testing_pods
-  pod 'Quick', '~> 0.9.2'
-  pod 'Nimble', '~> 4.0.1'
+  pod 'Quick', '~> 0.10.0'
+  pod 'Nimble', '~> 5.0.0'
   pod 'OHHTTPStubs'
   pod 'OHHTTPStubs/Swift'
 end
 
-def networking_pods 
-  pod 'Alamofire'
+def networking_pods
+  pod 'Alamofire', '~> 4.0'
 end
 
-pod 'SwiftyJSON'
+pod 'SwiftyJSON', '~> 3.0.0'
 
 target 'VIPER_Demo' do
   networking_pods
 end
 
 target 'VIPER_DemoTests' do
+  networking_pods
   testing_pods
 end
